# cryptopals-rust-solutions

./: .gitmodules  Cargo.toml  README.md  TODO  stress.sh  x.txt
cbc_mac_breaker/: README.md
cbc_mac_breaker/hash_break/: Cargo.toml  index.html  malicious.txt  simple_server.py
cbc_mac_breaker/hash_break/src/: main.rs
cbc_mac_breaker/message_forgery1/backend/: Dockerfile  app.py  requirements.txt  run.sh
cbc_mac_breaker/message_forgery1/easy_break/: Dockerfile  break.py  run.sh
cbc_mac_breaker/message_forgery1/frontend/: Dockerfile  build.sh  sample_client.py
cbc_mac_breaker/message_forgery2/backend/: app.py  build.sh
cbc_mac_breaker/message_forgery2/frontend/: requirements.txt  run.sh  sample_client.py
cbc_mac_breaker/message_forgery2/hard_break/: break.py  build.sh  docs.txt  docs_2nd_take.txt  run.sh
docs/: reverse_temper_transform expalnation.txt
hmac_breaker/: Cargo.toml  Dockerfile  app.py  requirements.txt  run.sh
hmac_breaker/src/: main.rs
src/: aes.rs  ctr.rs  diffie_hellman.rs  dsa.rs  error.rs  lib.rs  mac.rs  main.rs  mt19937.rs  number.rs  padding.rs  rsa.rs  xor.rs
src/challenges/: cbc.rs  common.rs  cookie.rs  ctr.rs  dsa.rs  ecb.rs  mac.rs  mod.rs  mt19937.rs  oracles.rs  rsa.rs  xor.rs
src/challenges/protocols/: diffie_hellman.rs  rsa.rs
src/challenges/protocols/diffie_hellman/: negotiated_groups_diffie_hellman.rs  secure_remote_password.rs
src/challenges/protocols/rsa/: broken_authentication.rs
src/protocols/: diffie_hellman.rs
src/protocols/diffie_hellman/: negotiated_groups_diffie_hellman.rs  secure_remote_password.rs
