[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4.3"
bitvec = "0.22.3"
openssl = { version = "0.10.35", features = ["vendored"] }
rand = "0.8.4"
serde = "1.0.127"
