[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4.3"
bitvec = "0.22.3"
openssl = { version = "0.10.35", features = ["vendored"] }
rand = "0.8.4"
serde = "1.0.127"
byteorder = "1.1.0"
rand_mt = "4.0.1"
sha-1 = {path = "dependencies/hashes/sha1"}
md4 = {path = "dependencies/hashes/md4"}
sha2 = {path = "dependencies/hashes/sha2"}
num-bigint = { version = "0.4.2", features = ["rand"] }
num-traits = "0.2.14"
num-primes = "0.2.0"
num-integer = "0.1.44"
asn1 = {path = "dependencies/rust-asn1"}
